# ternary-spreadsheet-python

./: .gitignore  README.md  pyproject.toml
docs/: FUTURE-INTEGRATION.md
src/ternary_spreadsheet/: __init__.py  autofill.py  cell.py  formula.py  grid.py  sort_engine.py
tests/: test_spreadsheet.py
