[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ternary-spreadsheet"
version = "0.1.0"
description = "A spreadsheet engine where cells are tiny ternary agents with values -1, 0, +1"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/SuperInstance/ternary-spreadsheet-python"
